--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "axios": "^1.13.4",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.2",
     "dotenv": "^17.2.3",
